# yafo

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: build_cli.yml
cli/: main.rs  reporter.rs
docs/: algorithm-design.md
src/: cipher.rs  ffi.rs  key_init.rs  lib.rs  pipeline.rs  types.rs
src/driver/: file.rs  in_mem.rs  mod.rs  statistics.rs
src/io/: file.rs
