[package]
name = "yafo"
description = "Yet another file obfuscator"
authors = ["Cyandev <unixzii@gmail.com>", "ktiays <cuansky@gmail.com>"]
license = "MIT"
repository = "https://github.com/Helixform/yafo"
version = "0.1.0"
edition = "2021"
readme = "README.md"

[features]
cli = ["dep:anyhow", "dep:clap", "dep:indicatif"]

[lib]
crate-type = ["lib", "staticlib"]

[[bin]]
name = "yafo"
path = "cli/main.rs"
doc = false
required-features = ["cli"]

[profile.release]
lto = true
strip = true
opt-level = 3
codegen-units = 1
panic = "abort"

[dependencies]
sha-1 = "0.10.1"
generic-array = "0.14"
anyhow = { version = "1", optional = true }
clap = { version = "4.3", features = ["derive"], optional = true }
indicatif = { version = "0.17", optional = true }

[build-dependencies]
cbindgen = "0.24.3"

[dev-dependencies]
aes = "0.8.2"
tea-soft = "0.3.0"
